fixed visual bugs
translate - icon and menu misaligned
input box
- gap between suggestions
- visual bug from window resizing

--- a/src/Recipe_Box/Filter.css
+++ b/src/Recipe_Box/Filter.css
@@ -131,14 +131,30 @@
   transform: scale(1.2);
 }
 
-.ingredient-item {
+.excludedIngredient-item {
   background-color: #ffffff;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
   margin-top: 0px;
+  padding: 5px 10px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  font-size: 14px
 }
 
-.ingredient-list {
+.excludedIngredient-list {
   margin-top: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  /* margin: 10px 1vh 0 1vh; */
+  gap: 8px;
+}
+
+.excludedIngredient-item button {
+  margin-left: 5px;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 .exclude-input {
