--- a/src/Title_Card/TranslateTTSBox.css
+++ b/src/Title_Card/TranslateTTSBox.css
@@ -8,32 +8,27 @@
   /* Display & Box Model */
   display: flex;
   gap: 10px;
-  height: 6vh;
-  width: auto;
+  height: 100px;
   margin-left: -50px;
   padding-right: 1vw;
-  margin-top: 1vh;
+  padding-top: 0%;
+  padding-bottom: 0%;
+  margin-top: 2vh;
   z-index: 10;
   align-items: center;
 }
 
-.translate-button{
-  position: relative;
-  display: flex;
-  z-index: 0;
-
+.translate-button .image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  min-width: 50px;
 }
 
-.translate-container{
-align-items: center;
-display: flex;
-position: relative;
-text-align: right;
-display: inline-block;
-margin: 0;
-padding: 0;
-height: 100%;
-width: 200px;  
+.translate-button {
+  padding: 0;
+  margin: 0%;
+  align-items: center;
 }
 
 .translate-menu{
@@ -47,7 +42,7 @@ right: 0;
 margin-top: -4px;
 background-color: white;
 border: none;
-border-radius: 10px;
+border-radius: 10px 10px 10px 10px;
 
 
 z-index: 1002;
@@ -167,7 +162,14 @@ cursor: pointer;
   border-radius: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   transition: transform 0.2s;
+  object-fit: contain;
 }
+
+.image-button img{
+  max-height: 50px;
+  max-width: 50px;
+}
+
 .image-container {
 
   background-color: white;
@@ -175,6 +177,7 @@ cursor: pointer;
   display: block;
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 .image-button:hover {
